Fix sections overflows

--- a/src/styles/scss/about.scss
+++ b/src/styles/scss/about.scss
@@ -9,7 +9,6 @@
   display: flex;
   width: 100%;
   justify-content: center;
-  height: 100vh;
   flex-direction: column;
 }
 
