--- a/src/styles/scss/style.scss
+++ b/src/styles/scss/style.scss
@@ -30,7 +30,6 @@ h2 {
   font-weight: normal;
   color: #003345;
   position: relative;
-  white-space: nowrap;
 
   &:after {
     position: absolute;
